<resources>
    <string name="app_name">Monke</string>
    <string name="btn_retry">Retry</string>
    <string name="title_main">Set up Monke</string>
    <string name="user_local_settings_key">io_monke_settings</string>

    <string name="guide_step_1">Switch Monke keyboard on</string>
    <string name="guide_step_1_button">Switch On</string>
    <string name="guide_step_2">Select Monke in the keyboard list</string>
    <string name="guide_step_2_button">Select Monke</string>
    <string name="guide_step_3">Deposit your Monke</string>
    <string name="guide_step_3_button">Deposit</string>
    <string name="guide_step_3_skip">Skip</string>
    <string name="font_medium">sans-serif-medium</string>
    <string name="hint_address">Address</string>

    <string name="balance_available" formatted="false">Available %s %s</string>
    <string name="btn_ok">OK</string>
    <string name="btn_send">Send</string>
    <string name="btn_deposit">Deposit</string>
    <string name="btn_copy_address_clipboard">Copy address to clipboard</string>
    <string name="btn_copy">Copy to clipboard</string>
    <string name="btn_done">Done</string>

    <string name="settings_transactions_list">Transactions 💸</string>
    <string name="settings_change_wallet">Change 👛 wallet</string>
    <string name="settings_backup_mnemonic">🔑 Backup Phrase</string>
    <string name="settings_report_problem">Report 🙈 problem</string>
    <string name="settings_rate_app">Rate Monke 💜 in Play Market</string>
    <string name="settings_make_donation_title">Make a 🍩 donation</string>
    <string name="settings_make_donation_desc">We spend everything on development</string>
    <string name="settings_buy_banana_title">Buy 🍌 Banana</string>
    <string name="settings_buy_banana_desc">Use coins to reduce transaction fees</string>
    <string name="settings_telegram_ch_title">Telegram channel</string>
    <string name="settings_telegram_ch_desc">Updated and announcements from Monke</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_desc">Monke.io</string>

    <string name="deposit_title"><![CDATA[Send some money to your <font color=#5124c5>Monke</font>]]></string>
    <string name="deposit_donate_title">Make a 🍩 donation to Monke</string>
    <string name="deposit_field_address">Use this address</string>

    <string name="title_backup">Backup Phrase</string>
    <string name="backup_description"><![CDATA[Please <b>write these 12 words down in order,</b> and keep them somewhere safe offline.<br/><br/>Backup Phrase allows you get access to funds of your Monke]]></string>
    <string name="btn_close">Close</string>

    <string-array name="share_titles">
        <item>💸Sent</item>
        <item>Shut up and take my money!</item>
        <item>Dollar dollar bill y\'al</item>
        <item>No money, no honey 🍯</item>
        <item>👍 Thnx</item>
        <!--        <item>👍🔗 %s</item>-->
    </string-array>
    <string name="share_title_tx">🔗 %s</string>

    <string name="sent_share_title_light"><![CDATA[<font color=#5124C5>Monke Sent!</font> <font color=#50555C>Share:</font>]]></string>
    <string name="sent_share_title_dark"><![CDATA[<font color=#ffffff>Monke Sent!</font> <font color=#ACB4BE>Share:</font>]]></string>
    <string name="fee_text_base" formatted="false">Fee %s %s</string>
    <string name="fee_text_banana" formatted="false">Fee 1%% to Banana + %s %s</string>
    <string name="btn_change_wallet">Change Wallet</string>
    <string name="hint_amount_caps">AMOUNT</string>
    <string name="btn_confirm">Confirm</string>
    <string name="dialog_title_select_account">Select Account</string>
    <string name="attention_please_wait">Please, wait a few seconds…</string>
    <string name="btn_view_tx">View transaction</string>
</resources>
