<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:popupTheme="@style/WalletPrimaryToolbar"
        app:subtitleTextColor="@color/textColorWhite"
        app:theme="@style/WalletPrimaryToolbar"
        app:titleTextColor="@android:color/white"
        tools:subtitle="9 600 000.0395 BIP"
        tools:title="30 000 000.1234 BIP" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_margin_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_edges" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_margin_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_edges" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="Buy 🍌 Banana"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_28"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges_half"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Available 100 000.000 BIP" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_out_amount_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/balance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_spend_amount"
                    style="@style/Wallet.Input.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:digits="0,1,2,3,4,5,6,7,8,9,.,\,"
                    android:ellipsize="end"
                    android:hint="@string/hint_amount_caps"
                    android:inputType="textMultiLine|numberDecimal"
                    android:tag="amount"
                    android:theme="@style/Wallet.Input.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <io.monke.app.internal.views.widgets.BipCircleImageView
                    android:id="@+id/coin_spend_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_bip_round"
                    app:civ_border_width="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/coin_spend"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/coin_spend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_medium"
                    android:text="BIP"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ic_dropdown"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_down_white"
                    android:tint="#D1D1D6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_in_amount_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/input_out_amount_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_get_amount"
                    style="@style/Wallet.Input.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:digits="0,1,2,3,4,5,6,7,8,9,.,\,"
                    android:ellipsize="end"
                    android:enabled="false"
                    android:hint="@string/hint_amount_caps"
                    android:inputType="none"
                    android:text="0"
                    android:theme="@style/Wallet.Input.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <io.monke.app.internal.views.widgets.BipCircleImageView
                    android:id="@+id/banana_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"

                    android:background="@color/transparent"
                    android:src="@drawable/ic_make_donation"
                    app:civ_border_width="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/coin_get"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/coin_get"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edges_half"
                    android:fontFamily="@string/font_medium"
                    android:text="BANANA"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/errorColor"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/input_in_amount_layout"
                tools:text="Some Error"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/bip_progress"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@color/transparent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="2dp"
                android:src="@drawable/img_big_banana"
                android:translationZ="1dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/submit"
                app:layout_constraintEnd_toEndOf="@id/submit"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="@id/submit"
                app:layout_constraintTop_toTopOf="@id/submit"
                app:layout_constraintVertical_bias=".5"
                tools:visibility="visible" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges"
                android:text="@string/btn_confirm"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/error_text" />

            <TextView
                android:id="@+id/fee_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Fee: 0.1 BIP"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
                app:layout_constraintStart_toStartOf="@id/guide_margin_left"
                app:layout_constraintTop_toBottomOf="@id/submit" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_edges"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fee_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>